<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp"
    android:paddingBottom="4dp">

    <ImageView
        android:id="@+id/btn_prev"
        style="@style/AudioPlayerButton"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/previous_item"
        android:src="@drawable/ic_skip_previous_black_24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_play"
        style="@style/AudioPlayerButton"
        android:contentDescription="@string/play_item"
        android:src="@drawable/ic_play_arrow_black_24dp"
        app:layout_constraintLeft_toRightOf="@id/btn_prev"
        app:layout_constraintRight_toLeftOf="@+id/btn_next"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_next"
        style="@style/AudioPlayerButton"
        android:contentDescription="@string/next_item"
        android:src="@drawable/ic_skip_next_black_24dp"
        app:layout_constraintLeft_toRightOf="@id/btn_play"
        app:layout_constraintRight_toLeftOf="@+id/vertical_guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".62" />

    <TextView
        android:id="@+id/tv_label"
        style="@style/RecipeCardLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/ingredients_label" />

    <LinearLayout
        android:id="@+id/details_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_label"
        tools:text="@string/debug_ingredient_string" />

</android.support.constraint.ConstraintLayout>
