<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/read_recipe_appbar"
    android:layout_width="match_parent"
    android:layout_height="@dimen/collapsing_toolbar_height"
    android:fitsSystemWindows="true"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    <net.opacapp.multilinecollapsingtoolbar.CollapsingToolbarLayout
        android:id="@+id/collapsing_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:collapsedTitleGravity="start"
        app:contentScrim="?attr/colorPrimary"
        app:expandedTitleGravity="bottom"
        app:expandedTitleMarginBottom="8dp"
        app:expandedTitleMarginEnd="64dp"
        app:expandedTitleMarginStart="24dp"
        app:layout_scrollFlags="scroll|exitUntilCollapsed"
        app:maxLines="4">

        <ImageView
            android:id="@+id/recipe_header_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/collapsing_toolbar_height"
            android:contentDescription="@string/recipe_photo_description"
            android:foreground="@color/photoTint"
            android:scaleType="fitXY"
            android:transitionName="@string/trans_img"
            app:layout_collapseMode="parallax" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:transitionName="@string/trans_txt"
            app:layout_collapseMode="pin"
            app:layout_scrollFlags="scroll|enterAlways">

        </android.support.v7.widget.Toolbar>

    </net.opacapp.multilinecollapsingtoolbar.CollapsingToolbarLayout>

</android.support.design.widget.AppBarLayout>